--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
       "react-app/jest"
     ]
   },
+  "jest": { "transformIgnorePatterns": [ "node_modules/(?!axios)" ] },
+  
   "browserslist": {
     "production": [
       ">0.2%",
